# hyprnav

./: README.md  copyAssets.sh  pyproject.toml
src/hyprnav/: __init__.py  click.py  config.py  constants.py  listen.py  util.py  window.py
src/hyprnav/assets/: config.yaml  style.css  window-teste.ui  window.ui
