[project]
name = "hyprnav"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Antrax", email = "fredcox@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "hyprpy>=0.2.0",
    "playsound3>=3.2.3",
    "pyqt6>=6.9.0",
    "rich>=14.0.0",
]

[project.scripts]
hyprnav = "hyprnav:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
